# ProyectoLaboratorio_RG

./: CMakeLists.txt
datos/: clients.csv
output/: Registro.csv
scr/: main.cpp
src/: main.cpp
src/lib/binarySearch/: binarySearch.cpp
src/lib/linearSearch/: linearSearch.cpp
src/lib/quicksort/: quicksort.cpp  quicksort.h
